--- a/styles/templates/default/css/main.css
+++ b/styles/templates/default/css/main.css
@@ -42,6 +42,8 @@
 	* Misc
 	* Shortcuts
 	* YouTube Panel
+	* Alert
+		- Alert theme
 */
 
 /* ================================================================ *
