--- a/styles/templates/default/css/main.css
+++ b/styles/templates/default/css/main.css
@@ -961,7 +961,7 @@ a.menu-root, a.menu-root:visited, a.menu-root:hover {
  * ================================================================ */
 var.ajax-params { display: none; }
 #ajax-loading, #ajax-error {
-	position: fixed; top:0 !important; z-index: 2000; padding: 4px; font-size: 11px;
+	position: fixed; top:0 !important; z-index: 2000; padding: 4px; font-size: 11px; color: white;
 	max-width: 400px; max-height: 200px; white-space: nowrap; display: none;
 }
 #ajax-loading {
