--- a/styles/templates/default/css/main.css
+++ b/styles/templates/default/css/main.css
@@ -303,6 +303,13 @@ a.postLink-name, a.postLink-name:visited { text-decoration: none; }
 /* ---------------------------------- *
      Inputs, buttons, forms
  * ---------------------------------- */
+input[type=button],
+input[type=submit],
+input[type=reset],
+input[type=file],
+button {
+	cursor: pointer;
+}
 input, textarea, select {
 	 font-family: Verdana,sans-serif;
 }
